k8s/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: test
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: test
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: test
    spec:
      containers:
        - image: test
          name: test
          resources: {}
      restartPolicy: Always
status: {}
