k8s/minimal-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: minimal-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: application
      port:
        number: 8765
